#added layout changes for mobile devices
