# EventCheckin.ClientApp/src/app/api/models/ticket-pass-search-model.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { SelectListItem } from '../models/select-list-item';
+export interface TicketPassSearchModel {
+  availableEvents?: Array<SelectListItem> | null;
+  selectedEventIds?: Array<number> | null;
+}
